green sock and css

--- a/CSS-image-sequencer/index.html
+++ b/CSS-image-sequencer/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <head>
   <style media="screen">
   .slide {
@@ -5,162 +7,184 @@
   }
 
   .slide:nth-child(1) {
-      -webkit-animation: fade 20s 20s infinite;
+      -webkit-animation: fade 2.91s 2.91s infinite;
       z-index:10;
   }
   .slide:nth-child(2) {
-      -webkit-animation: fade 20s 19s infinite;
+      -webkit-animation: fade 2.91s 2.868333333s infinite;
       z-index:10;
-  }.slide:nth-child(3) {
-      -webkit-animation: fade 20s 18s infinite;
+  }
+  .slide:nth-child(3) {
+      -webkit-animation: fade 2.91s 2.826666667s infinite;
       z-index:10;
-  }.slide:nth-child(4) {
-      -webkit-animation: fade 20s 17s infinite;
+  }
+  .slide:nth-child(4) {
+      -webkit-animation: fade 2.91s 2.785s infinite;
       z-index:10;
-  }.slide:nth-child(5) {
-      -webkit-animation: fade 20s 16s infinite;
+  }
+  .slide:nth-child(5) {
+      -webkit-animation: fade 2.91s 2.743333333s infinite;
       z-index:10;
-  }.slide:nth-child(6) {
-      -webkit-animation: fade 20s 15s infinite;
+  }
+  .slide:nth-child(6) {
+      -webkit-animation: fade 2.91s 2.701666667s infinite;
       z-index:10;
-  }.slide:nth-child(7) {
-      -webkit-animation: fade 20s 14s infinite;
+  }
+  .slide:nth-child(7) {
+      -webkit-animation: fade 2.91s 2.66s infinite;
       z-index:10;
-  }.slide:nth-child(8) {
-      -webkit-animation: fade 20s 13s infinite;
+  }
+  .slide:nth-child(8) {
+      -webkit-animation: fade 2.91s 2.618333333s infinite;
       z-index:10;
-  }.slide:nth-child(9) {
-      -webkit-animation: fade 20s 12s infinite;
+  }
+  .slide:nth-child(9) {
+      -webkit-animation: fade 2.91s 2.576666667s infinite;
       z-index:10;
-  }.slide:nth-child(10) {
-      -webkit-animation: fade 20s 11s infinite;
+  }
+  .slide:nth-child(10) {
+      -webkit-animation: fade 2.91s 2.535s infinite;
       z-index:10;
-  }.slide:nth-child(11) {
-      -webkit-animation: fade 20s 10s infinite;
+  }
+  .slide:nth-child(11) {
+      -webkit-animation: fade 2.91s 2.493333333s infinite;
       z-index:10;
-  }.slide:nth-child(12) {
-      -webkit-animation: fade 20s 9s infinite;
+  }
+  .slide:nth-child(12) {
+      -webkit-animation: fade 2.91s 2.451666667s infinite;
       z-index:10;
-  }.slide:nth-child(13) {
-      -webkit-animation: fade 20s 8s infinite;
+  }
+  .slide:nth-child(13) {
+      -webkit-animation: fade 2.91s 2.41s infinite;
       z-index:10;
-  }.slide:nth-child(14) {
-      -webkit-animation: fade 20s 7s infinite;
+  }
+  .slide:nth-child(14) {
+      -webkit-animation: fade 2.91s 2.368333333s infinite;
       z-index:10;
-  }.slide:nth-child(15) {
-      -webkit-animation: fade 20s 6s infinite;
+  }
+  .slide:nth-child(15) {
+      -webkit-animation: fade 2.91s 2.326666667s infinite;
       z-index:10;
-  }.slide:nth-child(16) {
-      -webkit-animation: fade 20s 5s infinite;
+  }
+  .slide:nth-child(16) {
+      -webkit-animation: fade 2.91s 2.285s infinite;
       z-index:10;
-  }.slide:nth-child(17) {
-      -webkit-animation: fade 20s 4s infinite;
+  }
+  .slide:nth-child(17) {
+      -webkit-animation: fade 2.91s 2.243333333s infinite;
       z-index:10;
-  }.slide:nth-child(18) {
-      -webkit-animation: fade 20s 3s infinite;
+  }
+  .slide:nth-child(18) {
+      -webkit-animation: fade 2.91s 2.201666667s infinite;
       z-index:10;
-  }.slide:nth-child(19) {
-      -webkit-animation: fade 20s 2s infinite;
+  }
+  .slide:nth-child(19) {
+      -webkit-animation: fade 2.91s 2.16s infinite;
       z-index:10;
-  }.slide:nth-child(20) {
-      -webkit-animation: fade 20s 1s infinite;
+  }
+  .slide:nth-child(20) {
+      -webkit-animation: fade 2.91s 2.118333333s infinite;
       z-index:10;
   }
 
 
-  @-webkit-keyframes fade {
-      0%{
-        opacity: 1;
-     }
-     15% {
-        opacity:1;
-     }
-     25%{
-        opacity: 0;
-     }
-     90% {
-        opacity:0;
-     }
-     100% {
-        opacity:1;
-     }
-  }
 
+
+
+
+
+
+
+@-webkit-keyframes fade {
+    0%{
+      opacity: 1;
+   }
+   15% {
+      opacity:1;
+   }
+   25%{
+      opacity: 0;
+   }
+   90% {
+      opacity:0;
+   }
+   100% {
+      opacity:1;
+   }
+}
   </style>
 </head>
 
 <body>
-
-
-<img src="pics/DSC04775.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04776.jpg" class="slide" alt="" />
-<img src="pics/DSC04777.jpg" class="slide" alt="" />
-<img src="pics/DSC04778.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04779.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04780.jpg" class="slide" alt="" />
-<img src="pics/DSC04781.jpg" class="slide" alt="" />
-<img src="pics/DSC04782.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04783.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04784.jpg" class="slide" alt="" />
-<img src="pics/DSC04785.jpg" class="slide" alt="" />
-<img src="pics/DSC04786.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04787.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04788.jpg" class="slide" alt="" />
-<img src="pics/DSC04789.jpg" class="slide" alt="" />
-<img src="pics/DSC04790.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04791.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04792.jpg" class="slide" alt="" />
-<img src="pics/DSC04793.jpg" class="slide" alt="" />
-<img src="pics/DSC04794.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04795.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04796.jpg" class="slide" alt="" />
-<img src="pics/DSC04797.jpg" class="slide" alt="" />
-<img src="pics/DSC04798.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04799.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04800.jpg" class="slide" alt="" />
-<img src="pics/DSC04801.jpg" class="slide" alt="" />
-<img src="pics/DSC04802.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04803.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04804.jpg" class="slide" alt="" />
-<img src="pics/DSC04805.jpg" class="slide" alt="" />
-<img src="pics/DSC04806.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04807.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04808.jpg" class="slide" alt="" />
-<img src="pics/DSC04809.jpg" class="slide" alt="" />
-<img src="pics/DSC04810.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04811.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04812.jpg" class="slide" alt="" />
-<img src="pics/DSC04813.jpg" class="slide" alt="" />
-<img src="pics/DSC04814.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04815.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04816.jpg" class="slide" alt="" />
-<img src="pics/DSC04817.jpg" class="slide" alt="" />
-<img src="pics/DSC04818.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04819.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04820.jpg" class="slide" alt="" />
-<img src="pics/DSC04821.jpg" class="slide" alt="" />
-<img src="pics/DSC04822.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04823.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04824.jpg" class="slide" alt="" />
-<img src="pics/DSC04825.jpg" class="slide" alt="" />
-<img src="pics/DSC04826.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04827.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04828.jpg" class="slide" alt="" />
-<img src="pics/DSC04829.jpg" class="slide" alt="" />
-<img src="pics/DSC04830.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04831.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04832.jpg" class="slide" alt="" />
-<img src="pics/DSC04833.jpg" class="slide" alt="" />
-<img src="pics/DSC04834.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04835.jpg" class="slide" alt="" />
-<!-- <img src="pics/DSC04836.jpg" class="slide" alt="" />
-<img src="pics/DSC04837.jpg" class="slide" alt="" />
-<img src="pics/DSC04838.jpg" class="slide" alt="" /> -->
-<img src="pics/DSC04839.jpg" class="slide" alt="" />
-<img src="pics/DSC04840.jpg" class="slide" alt="" />
-<img src="pics/DSC04841.jpg" class="slide" alt="" />
-<img src="pics/DSC04842.jpg" class="slide" alt="" />
-<img src="pics/DSC04843.jpg" class="slide" alt="" />
-<img src="pics/DSC04844.jpg" class="slide" alt="" />
-<img src="pics/DSC04845.jpg" class="slide" alt="" />
+    <img src="pics/DSC04775.jpg" class="slide"/>
+    <img src="pics/DSC04776.jpg" class="slide"/>
+    <img src="pics/DSC04777.jpg" class="slide"/>
+    <img src="pics/DSC04778.jpg" class="slide"/>
+    <img src="pics/DSC04779.jpg" class="slide"/>
+    <img src="pics/DSC04780.jpg" class="slide"/>
+    <img src="pics/DSC04781.jpg" class="slide"/>
+    <img src="pics/DSC04782.jpg" class="slide"/>
+    <img src="pics/DSC04783.jpg" class="slide"/>
+    <img src="pics/DSC04784.jpg" class="slide"/>
+    <img src="pics/DSC04785.jpg" class="slide"/>
+    <img src="pics/DSC04786.jpg" class="slide"/>
+    <img src="pics/DSC04787.jpg" class="slide"/>
+    <img src="pics/DSC04788.jpg" class="slide"/>
+    <img src="pics/DSC04789.jpg" class="slide"/>
+    <img src="pics/DSC04790.jpg" class="slide"/>
+    <img src="pics/DSC04791.jpg" class="slide"/>
+    <img src="pics/DSC04792.jpg" class="slide"/>
+    <img src="pics/DSC04793.jpg" class="slide"/>
+    <img src="pics/DSC04794.jpg" class="slide"/>
+    <img src="pics/DSC04795.jpg" class="slide"/>
+    <!-- <img src="pics/DSC04796.jpg" class="slide"/>
+    <img src="pics/DSC04797.jpg" class="slide"/>
+    <img src="pics/DSC04798.jpg" class="slide"/>
+    <img src="pics/DSC04799.jpg" class="slide"/>
+    <img src="pics/DSC04800.jpg" class="slide"/>
+    <img src="pics/DSC04801.jpg" class="slide"/>
+    <img src="pics/DSC04802.jpg" class="slide"/>
+    <img src="pics/DSC04803.jpg" class="slide"/>
+    <img src="pics/DSC04804.jpg" class="slide"/>
+    <img src="pics/DSC04805.jpg" class="slide"/>
+    <img src="pics/DSC04806.jpg" class="slide"/>
+    <img src="pics/DSC04807.jpg" class="slide"/>
+    <img src="pics/DSC04808.jpg" class="slide"/>
+    <img src="pics/DSC04809.jpg" class="slide"/>
+    <img src="pics/DSC04810.jpg" class="slide"/>
+    <img src="pics/DSC04811.jpg" class="slide"/>
+    <img src="pics/DSC04812.jpg" class="slide"/>
+    <img src="pics/DSC04813.jpg" class="slide"/>
+    <img src="pics/DSC04814.jpg" class="slide"/>
+    <img src="pics/DSC04815.jpg" class="slide"/>
+    <img src="pics/DSC04816.jpg" class="slide"/>
+    <img src="pics/DSC04817.jpg" class="slide"/>
+    <img src="pics/DSC04818.jpg" class="slide"/>
+    <img src="pics/DSC04819.jpg" class="slide"/>
+    <img src="pics/DSC04820.jpg" class="slide"/>
+    <img src="pics/DSC04821.jpg" class="slide"/>
+    <img src="pics/DSC04822.jpg" class="slide"/>
+    <img src="pics/DSC04823.jpg" class="slide"/>
+    <img src="pics/DSC04824.jpg" class="slide"/>
+    <img src="pics/DSC04825.jpg" class="slide"/>
+    <img src="pics/DSC04826.jpg" class="slide"/>
+    <img src="pics/DSC04827.jpg" class="slide"/>
+    <img src="pics/DSC04828.jpg" class="slide"/>
+    <img src="pics/DSC04829.jpg" class="slide"/>
+    <img src="pics/DSC04830.jpg" class="slide"/>
+    <img src="pics/DSC04831.jpg" class="slide"/>
+    <img src="pics/DSC04832.jpg" class="slide"/>
+    <img src="pics/DSC04833.jpg" class="slide"/>
+    <img src="pics/DSC04834.jpg" class="slide"/>
+    <img src="pics/DSC04835.jpg" class="slide"/>
+    <img src="pics/DSC04836.jpg" class="slide"/>
+    <img src="pics/DSC04837.jpg" class="slide"/>
+    <img src="pics/DSC04838.jpg" class="slide"/>
+    <img src="pics/DSC04839.jpg" class="slide"/>
+    <img src="pics/DSC04840.jpg" class="slide"/>
+    <img src="pics/DSC04841.jpg" class="slide"/>
+    <img src="pics/DSC04842.jpg" class="slide"/>
+    <img src="pics/DSC04843.jpg" class="slide"/>
+    <img src="pics/DSC04844.jpg" class="slide"/>
+    <img src="pics/DSC04845.jpg" class="slide"/> -->
 </body>
